examples/test/testpolicy8400.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8400
  namespace: namespace332
spec:
  podSelector:
    matchLabels:
      key33: value29
      key24: value0
      key3: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value12
      podSelector:
        matchLabels:
          key15: value24
          key33: value44
          key13: value35
